Bug Fixes from appbuilder-1.6 (#9470)
* Fix : Selecting same value again is not discarding the selected value in single select

* If default options list is empty then return null

* Fix : Deleting the default option will rresult into removing from default option list as well

* showing error message at the bottom and cell value in the center for text and string column type

* Making Pagination aligned in the center horizontally

* overlay is not showing for string column type

* Padding right on number cell

* Fix : Table is crashing becasue of null default value

--- a/frontend/src/_styles/table-component.scss
+++ b/frontend/src/_styles/table-component.scss
@@ -128,6 +128,9 @@
     overflow-y: hidden;
 
     &.has-number {
+      padding: 0px 12px 0px 12px !important;
+    }
+    &.has-number.isEditable{
       padding: 0px 0px 0px 12px !important;
     }
 
